# Vangers

./: CMakeLists.txt  README.md
MSVC_compilation_configurations/clunk_build/: build.cmake  build_command.bat
MSVC_compilation_configurations/vangers_build/: build.cmake  build_command.bat  cmake_command.bat
MSVC_compilation_configurations/zlib_build/: build.cmake  build_command.bat
data/iscreen/: ext_evnt.h  temp.scr
data/iscreen/scripts/: mainmenu.scr  strings.inc  strings1.inc  strings2.inc
docs/: credits_en.txt  credits_ru.txt
docs/advanced/: bugs.txt  compile.html  debug_observations.html  items_models.ods  items_models.xls  items_models.xml  rand.html  vangers_item_types.ods  vangers_item_types.xls  vangers_item_types.xml
docs/user/en/: how_to_play_en.html  work_done_en.html
docs/user/ru/: how_to_play_ru.html  work_done_ru.html
lib/getRSS/: CMakeLists.txt
lib/utils/: CMakeLists.txt
lib/xgraph/: xgraph.cpp  xgraph.h
lib/xsound/: avi.cpp
lib/xtool/: CMakeLists.txt  xrec.h  xstream.h  xtcore.cpp
lib/xtool/iniparser/: dictionary.c  dictionary.h
lib/xtool/xmath/: xmath.cpp  xmath.h
lib/xtool/xrecorder/: xrec.cpp
lib/xtool/xstream/: xscnvin.cpp  xscnvout.cpp  xsinput.cpp  xsoutput.cpp  xsserv.cpp
src/: CMakeLists.txt  common.h  network.cpp  network.h  road.cpp  xjoystick.cpp  xjoystick.h  xsocket.cpp
src/3d/: 3d_math.cpp  3d_math.h  3dgraph.h  3dobject.h  dynamics.cpp  general.h
src/actint/: aci_scr.cpp  actint.cpp  actint.h  actintml.cpp  ascr_fnc.cpp  item_api.h
src/iscreen/: controls.cpp  controls.h  iextern.cpp  imap_fnc.cpp  iscr_fnc.cpp  iscreen.cpp  iscreen.h  iscreen_options.h  iscript.cpp  ivmap.cpp  script.cpp
src/particle/: particle.cpp  particle.h  partmap.cpp
src/sound/: hsound.h
src/terra/: perpslop.cpp  slopskip.cpp  vmap.cpp
src/units/: effect.cpp  hobj.cpp  hobj.h  items.cpp  mechos.cpp  moveland.cpp  sensor.cpp
src/uvs/: diagen.cpp  diagen.h  univang.cpp
