# root
# tractortractor's added begin
# Executable will search for libraries in it's current directory.
set(CMAKE_INSTALL_RPATH "$ORIGIN")
# tractortractor's added end

PROJECT(vangers)

#CMAKE_MINIMUM_REQUIRED(VERSION 2.8.0) # tractortractor's commented
CMAKE_MINIMUM_REQUIRED(VERSION 3.1.0) # tractortractor's added
set (CMAKE_CXX_STANDARD 11) # tractortractor's added

# modules
SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)

# options
OPTION(RUSSIAN_VERSION "Build russian version" ON)
OPTION(BINARY_SCRIPT "Use binary script for interface" ON)
OPTION(WITH_OPENGL "Use experimental OpenGL renderer" OFF)
OPTION(DIAGEN_TEST "Dialog generator and test subsystem" OFF)

# hide optons
OPTION(ACTINT "Actint user interface in road game" ON) 

SET(CMAKE_CONFIGURATION_TYPES "Release;Debug;MinSizeRel;RelWithDebInfo")

# depends
# tractortractor's added begin
if(ENTRIES_CONTROL OR VANGERS_DEBUG)
	set(BOOST_MIN_VERSION "1.59.0")
	FIND_PACKAGE(Boost ${BOOST_MIN_VERSION} REQUIRED filesystem)
endif(ENTRIES_CONTROL OR VANGERS_DEBUG)
# tractortractor's added end
FIND_PACKAGE(SDL2 REQUIRED)
FIND_PACKAGE(SDL2_net REQUIRED)
FIND_PACKAGE(Ogg REQUIRED)
FIND_PACKAGE(Vorbis REQUIRED)
if (NOT APPLE)
	FIND_PACKAGE(VorbisFile REQUIRED)
endif (NOT APPLE)

FIND_PACKAGE(Clunk REQUIRED)
if (MINGW)
	ADD_DEFINITIONS(-I/local/include/)
	ADD_DEFINITIONS(-L/local/lib/)
	#set(SDL_net_INCLUDE_DIR "/local/include/SDL")
	ADD_DEFINITIONS(-I/local/include/SDL2)
	#set(SDLNET_LIBRARY "/local/bin/SDL_net.dll")
	
	set(FFMPEG_INCLUDE_DIRS "/local/include/libavcodec /local/include/libavformat")
	ADD_DEFINITIONS(-I/local/include/libavcodec -I/local/include/libavformat)
	set(FFMPEG_LIBRARIES "/local/bin/avutil-52.dll" "/local/bin/avformat-54.dll" "/local/bin/avcodec-54.dll")
	set(ZLIB_LIBRARIES "/local/lib/zlib1.dll")
	
	set(CLUNK_INCLUDE_DIR "/local/include/clunk")
	ADD_DEFINITIONS(-I/local/include/clunk)
	set(CLUNK_LIBRARY "/local/lib/libclunk.dll")
	set(WINDOWS_RES "../vangers.res")
	ADD_DEFINITIONS(-Wl,-subsystem,windows)
else (MINGW)
	FIND_PACKAGE(FFMPEG REQUIRED)
	FIND_PACKAGE(ZLIB REQUIRED)
	set(WINDOWS_RES "")
endif (MINGW)



IF(RUSSIAN_VERSION)
	ADD_DEFINITIONS(-DRUSSIAN_VERSION)
ENDIF(RUSSIAN_VERSION)
IF(BINARY_SCRIPT)
	ADD_DEFINITIONS(-D_BINARY_SCRIPT_)
ENDIF(BINARY_SCRIPT)

IF(WITH_OPENGL)
	FIND_PACKAGE(OpenGL REQUIRED)
	ADD_DEFINITIONS(-DWITH_OPENGL)
ENDIF(WITH_OPENGL)

IF(ACTINT)
	ADD_DEFINITIONS(-DACTINT)
ENDIF(ACTINT)

IF(DIAGEN_TEST)
	ADD_DEFINITIONS(-DDIAGEN_TEST)
ENDIF(DIAGEN_TEST)
IF(IN_FILE)
	ADD_DEFINITIONS(-D_IN_FILE_)
ENDIF(IN_FILE)



# tractortractor's added begin
#IF(NOT MSVC AND DEFINE_MSVC_DEBUG)
#	ADD_DEFINITIONS(-D_DEBUG)
#ENDIF(NOT MSVC AND DEFINE_MSVC_DEBUG)

IF(VANGERS_DEBUG)
	ADD_DEFINITIONS(-DVANGERS_DEBUG)
ENDIF(VANGERS_DEBUG)

IF(FOUT)
	ADD_DEFINITIONS(-D_FOUT_)
ENDIF(FOUT)
IF(ALL_ITEM_IN_SHOP)
	ADD_DEFINITIONS(-DALL_ITEM_IN_SHOP)
ENDIF(ALL_ITEM_IN_SHOP)
IF(TABU_REPORT)
	ADD_DEFINITIONS(-DTABU_REPORT)
ENDIF(TABU_REPORT)
IF(STAND_REPORT)
	ADD_DEFINITIONS(-DSTAND_REPORT)
ENDIF(STAND_REPORT)
IF(TOTAL_CASH)
	ADD_DEFINITIONS(-DTOTAL_CASH)
ENDIF(TOTAL_CASH)
IF(CHANGE_CYCLE_ON_NETWORK)
	ADD_DEFINITIONS(-DCHANGE_CYCLE_ON_NETWORK)
ENDIF(CHANGE_CYCLE_ON_NETWORK)
IF(MSG_OUT)
	ADD_DEFINITIONS(-DMSG_OUT)
ENDIF(MSG_OUT)
IF(ENTRIES_CONTROL)
	ADD_DEFINITIONS(-DENTRIES_CONTROL)
ENDIF(ENTRIES_CONTROL)

IF(SICHER_DEBUG)
	ADD_DEFINITIONS(-DSICHER_DEBUG)
ENDIF(SICHER_DEBUG)
IF(NO_BORDER_FIELD)
	ADD_DEFINITIONS(-DNO_BORDER_FIELD)
ENDIF(NO_BORDER_FIELD)

IF(IMOVE_MOUSE_OBJECTS)
	ADD_DEFINITIONS(-DiMOVE_MOUSE_OBJECTS)
ENDIF(IMOVE_MOUSE_OBJECTS)

IF(ACI_LOGFILE)
	ADD_DEFINITIONS(-D_ACI_LOGFILE_)
ENDIF(ACI_LOGFILE)
IF(ACI_SKIP_MAINMENU)
	ADD_DEFINITIONS(-D_ACI_SKIP_MAINMENU_)
ENDIF(ACI_SKIP_MAINMENU)
IF(ACI_STARTUP_LOAD_GAME)
	ADD_DEFINITIONS(-D_ACI_STARTUP_LOAD_GAME_)
ENDIF(ACI_STARTUP_LOAD_GAME)
IF(ACI_SKIP_SHOP)
	ADD_DEFINITIONS(-D_ACI_SKIP_SHOP_)
ENDIF(ACI_SKIP_SHOP)
IF(ACI_NO_SHOP_ANIMATION)
	ADD_DEFINITIONS(-D_ACI_NO_SHOP_ANIMATION_)
ENDIF(ACI_NO_SHOP_ANIMATION)
IF(ACI_ESCAVE_DEBUG)
	ADD_DEFINITIONS(-D_ACI_ESCAVE_DEBUG_)
ENDIF(ACI_ESCAVE_DEBUG)
IF(ACI_MAP_TESTING)
	ADD_DEFINITIONS(-D_ACI_MAP_TESTING_)
ENDIF(ACI_MAP_TESTING)
IF(ACI_SHOW_BUGS_ON_MAP)
	ADD_DEFINITIONS(-D_ACI_SHOW_BUGS_ON_MAP_)
ENDIF(ACI_SHOW_BUGS_ON_MAP)
IF(ACI_CHECK_PHRASES)
	ADD_DEFINITIONS(-D_ACI_CHECK_PHRASES_)
ENDIF(ACI_CHECK_PHRASES)
IF(ACI_BOUND_TEST)
	ADD_DEFINITIONS(-D_ACI_BOUND_TEST_)
ENDIF(ACI_BOUND_TEST)

IF(QUICK_LOAD)
	ADD_DEFINITIONS(-DQUICK_LOAD)
ENDIF(QUICK_LOAD)


IF(UNIT_DEBUG_VIEW)
	ADD_DEFINITIONS(-DUNIT_DEBUG_VIEW)
ENDIF(UNIT_DEBUG_VIEW)
IF(TEST_TRACK)
	ADD_DEFINITIONS(-DTEST_TRACK)
ENDIF(TEST_TRACK)
IF(ITEM_LOG)
	ADD_DEFINITIONS(-DITEM_LOG)
ENDIF(ITEM_LOG)
IF(SAVE_AI_STATUS)
	ADD_DEFINITIONS(-DSAVE_AI_STATUS)
ENDIF(SAVE_AI_STATUS)
IF(TESTDIC)
	ADD_DEFINITIONS(-DTESTDIC)
ENDIF(TESTDIC)
IF(MEMORY_STATISTICS)
	ADD_DEFINITIONS(-DMEMORY_STATISTICS)
ENDIF(MEMORY_STATISTICS)
IF(ACTINT_MEMSTAT)
	ADD_DEFINITIONS(-D_ACTINT_MEMSTAT_)
ENDIF(ACTINT_MEMSTAT)

IF(SAVE_BINARY_SCRIPT)
	ADD_DEFINITIONS(-D_SAVE_BINARY_SCRIPT_)
ENDIF(SAVE_BINARY_SCRIPT)
IF(SAVE_PACKED_SCRIPT)
	ADD_DEFINITIONS(-D_SAVE_PACKED_SCRIPT_)
ENDIF(SAVE_PACKED_SCRIPT)
IF(iSCRIPT_DEBUG)
	ADD_DEFINITIONS(-D_iSCRIPT_DEBUG_)
ENDIF(iSCRIPT_DEBUG)

IF(FIRE_TEST)
	ADD_DEFINITIONS(-DFIRE_TEST)
ENDIF(FIRE_TEST)

IF(DEMO)
	ADD_DEFINITIONS(-D_DEMO_)
ENDIF(DEMO)
IF(AUTOMATIC_CHANGE_WORLD)
	ADD_DEFINITIONS(-DAUTOMATIC_CHANGE_WORLD)
ENDIF(AUTOMATIC_CHANGE_WORLD)

IF(NO_CDAUDIO)
	ADD_DEFINITIONS(-D_NO_CDAUDIO_)
ENDIF(NO_CDAUDIO)

IF(ZRECORDER_ENABLED)
	ADD_DEFINITIONS(-DzRECORDER_ENABLED)
ENDIF(ZRECORDER_ENABLED)
IF(XRECORDER_LOG)
	ADD_DEFINITIONS(-D_XRECORDER_LOG_)
ENDIF(XRECORDER_LOG)
IF(RTO_LOG)
	ADD_DEFINITIONS(-D_RTO_LOG_)
ENDIF(RTO_LOG)
IF(AML_DEBUG)
	ADD_DEFINITIONS(-DAML_DEBUG)
ENDIF(AML_DEBUG)

IF(TERRAIN16)
	ADD_DEFINITIONS(-DTERRAIN16)
ENDIF(TERRAIN16)
IF(XGR_SUPPRESS_HICOLOR)
	ADD_DEFINITIONS(-DXGR_SUPPRESS_HICOLOR)
ENDIF(XGR_SUPPRESS_HICOLOR)

IF(LARGE_MODEL)
	ADD_DEFINITIONS(-D_LARGE_MODEL_)
ENDIF(LARGE_MODEL)
IF(STATIC_TABLES)
	ADD_DEFINITIONS(-D_STATIC_TABLES_)
ENDIF(STATIC_TABLES)

IF(XSTRDUP)
	ADD_DEFINITIONS(-DXSTRDUP)
ENDIF(XSTRDUP)

IF(MT)
	ADD_DEFINITIONS(-D_MT_)
ENDIF(MT)

IF(GENERATE_MATRIX_SHAPES)
	ADD_DEFINITIONS(-D_GENERATE_MATRIX_SHAPES_)
ENDIF(GENERATE_MATRIX_SHAPES)
IF(GENERATE_iMATRIX_SHAPES)
	ADD_DEFINITIONS(-D_GENERATE_iMATRIX_SHAPES_)
ENDIF(GENERATE_iMATRIX_SHAPES)
IF(GENERATE_ITEM_DATA)
	ADD_DEFINITIONS(-D_GENERATE_ITEM_DATA_)
ENDIF(GENERATE_ITEM_DATA)
IF(SAVE_TNT_DATA)
	ADD_DEFINITIONS(-DSAVE_TNT_DATA)
ENDIF(SAVE_TNT_DATA)
IF(FACET_FLOOR)
	ADD_DEFINITIONS(-D_FACET_FLOOR_)
ENDIF(FACET_FLOOR)

IF(ESCAPE_EXIT)
	ADD_DEFINITIONS(-DESCAPE_EXIT)
ENDIF(ESCAPE_EXIT)
IF(ACTINT)
	ADD_DEFINITIONS(-DACTINT)
ENDIF(ACTINT)

IF(SAVE_EXPLOSION)
	ADD_DEFINITIONS(-DSAVE_EXPLOSION)
ENDIF(SAVE_EXPLOSION)

IF(GLOBAL_TIMER)
	ADD_DEFINITIONS(-DGLOBAL_TIMER)
ENDIF(GLOBAL_TIMER)



#defined by default
IF(ROAD)
	ADD_DEFINITIONS(-D_ROAD_)
ENDIF(ROAD)
IF(COMPACT_3D)
	ADD_DEFINITIONS(-DCOMPACT_3D)
ENDIF(COMPACT_3D)
IF(LOWLEVEL_OUTPUT)
	ADD_DEFINITIONS(-DLOWLEVEL_OUTPUT)
ENDIF(LOWLEVEL_OUTPUT)
IF(ML_COMPRESS_ON)
	ADD_DEFINITIONS(-DML_COMPRESS_ON)
ENDIF(ML_COMPRESS_ON)
IF(ACI_PACK_SAVES)
	ADD_DEFINITIONS(-D_ACI_PACK_SAVES_)
ENDIF(ACI_PACK_SAVES)
IF(ACI_CHECK_DIALOGS)
	ADD_DEFINITIONS(-D_ACI_CHECK_DIALOGS_)
ENDIF(ACI_CHECK_DIALOGS)
IF(ACI_BML_FONTS)
	ADD_DEFINITIONS(-D_ACI_BML_FONTS_)
ENDIF(ACI_BML_FONTS)

IF(ISCREEN)
	ADD_DEFINITIONS(-DISCREEN)
ENDIF(ISCREEN)
IF(SHOW_IMAGES)
	ADD_DEFINITIONS(-DSHOW_IMAGES)
ENDIF(SHOW_IMAGES)
IF(SHOW_LOGOS)
	ADD_DEFINITIONS(-DSHOW_LOGOS)
ENDIF(SHOW_LOGOS)

IF(EVENTS_LOG)
	ADD_DEFINITIONS(-DEVENTS_LOG)
ENDIF(EVENTS_LOG)
IF(EXTERNAL_USE)
	ADD_DEFINITIONS(-DEXTERNAL_USE)
ENDIF(EXTERNAL_USE)
IF(DYN_ALLOC)
	ADD_DEFINITIONS(-DDYN_ALLOC)
ENDIF(DYN_ALLOC)
IF(GENERATE_EXIT)
	ADD_DEFINITIONS(-D_GENERATE_EXIT_)
ENDIF(GENERATE_EXIT)
IF(STARTUP_TESTING)
	ADD_DEFINITIONS(-DSTARTUP_TESTING)
ENDIF(STARTUP_TESTING)
IF(SAVE_SINGE_LANGUAGE)
	ADD_DEFINITIONS(-DSAVE_SINGE_LANGUAGE)
ENDIF(SAVE_SINGE_LANGUAGE)
IF(SINGLE_LANGUAGE)
	ADD_DEFINITIONS(-DSINGLE_LANGUAGE)
ENDIF(SINGLE_LANGUAGE)

IF(NEW_TNT)
	ADD_DEFINITIONS(-DNEW_TNT)
ENDIF(NEW_TNT)
IF(LOCATION_ENGINE_MESSAGE)
	ADD_DEFINITIONS(-DLOCATION_ENGINE_MESSAGE)
ENDIF(LOCATION_ENGINE_MESSAGE)

#IF(ACTINT)
#	ADD_DEFINITIONS(-DACTINT)
#ENDIF(ACTINT)

IF(SIMPLE_PARTICLE_ON)
	ADD_DEFINITIONS(-DSIMPLE_PARTICLE_ON)
ENDIF(SIMPLE_PARTICLE_ON)
IF(PARTICLE_ON)
	ADD_DEFINITIONS(-DPARTICLE_ON)
ENDIF(PARTICLE_ON)
IF(STACK_EMPTY_IGNORE)
	ADD_DEFINITIONS(-DSTACK_EMPTY_IGNORE)
ENDIF(STACK_EMPTY_IGNORE)
IF(MOVELAND_ON)
	ADD_DEFINITIONS(-DMOVELAND_ON)
ENDIF(MOVELAND_ON)
IF(DEVICE_ON)
	ADD_DEFINITIONS(-DDEVICE_ON)
ENDIF(DEVICE_ON)

IF(DAST)
	ADD_DEFINITIONS(-D_DAST_)
ENDIF(DAST)

IF(TINY_MODE)
	ADD_DEFINITIONS(-DTINY_MODE)
ENDIF(TINY_MODE)

# Not supported
IF(SURMAP)
	ADD_DEFINITIONS(-D_SURMAP_)
ENDIF(SURMAP)
IF(SESSION)
	ADD_DEFINITIONS(-DSESSION)
ENDIF(SESSION)
IF(FILEMAPPING)
	ADD_DEFINITIONS(-DFILEMAPPING)
ENDIF(FILEMAPPING)
IF(HIGHC)
	ADD_DEFINITIONS(-D__HIGHC__)
ENDIF(HIGHC)
IF(LOW_LEVEL_LINE)
	ADD_DEFINITIONS(-DLOW_LEVEL_LINE)
ENDIF(LOW_LEVEL_LINE)
IF(TEST_MACRO)
	ADD_DEFINITIONS(-D_TEST_)
ENDIF(TEST_MACRO)
IF(VTEST)
	ADD_DEFINITIONS(-D_VTEST_)
ENDIF(VTEST)
IF(TURN_TEST)
	ADD_DEFINITIONS(-DTURN_TEST)
ENDIF(TURN_TEST)
IF(ZORTECHC)
	ADD_DEFINITIONS(-D__ZORTECHC__)
ENDIF(ZORTECHC)
IF(XT_TEST_LIST)
	ADD_DEFINITIONS(-D_XT_TEST_LIST_)
ENDIF(XT_TEST_LIST)
IF(FULLSCREEN_MODE)
	ADD_DEFINITIONS(-D_FULLSCREEN_MODE_)
ENDIF(FULLSCREEN_MODE)
IF(SAVE_ABILITY)
	ADD_DEFINITIONS(-DSAVE_ABILITY)
ENDIF(SAVE_ABILITY)
IF(NetRally)
	ADD_DEFINITIONS(-D_NetRally_)
ENDIF(NetRally)
IF(ZMOD_BETA)
	ADD_DEFINITIONS(-DZMOD_BETA)
ENDIF(ZMOD_BETA)
IF(ZMOD_DEBUG)
	ADD_DEFINITIONS(-D_ZMOD_DEBUG_)
ENDIF(ZMOD_DEBUG)
IF(BMP2SCR_TURN_ENABLE)
	ADD_DEFINITIONS(-DBMP2SCR_TURN_ENABLE)
ENDIF(BMP2SCR_TURN_ENABLE)
IF(OVERLAP_CHECK)
	ADD_DEFINITIONS(-DOVERLAP_CHECK)
ENDIF(OVERLAP_CHECK)
IF(ASM_OPTIMIZE)
	ADD_DEFINITIONS(-DASM_OPTIMIZE)
ENDIF(ASM_OPTIMIZE)
IF(BETA_TESTING)
	ADD_DEFINITIONS(-DBETA_TESTING)
ENDIF(BETA_TESTING)
IF(CDCHECK)
	ADD_DEFINITIONS(-DCDCHECK)
ENDIF(CDCHECK)
IF(STEAM_API)
	ADD_DEFINITIONS(-D_STEAM_API_)
ENDIF(STEAM_API)
IF(XMATH_NO_IOSTREAM)
	ADD_DEFINITIONS(-D_XMATH_NO_IOSTREAM)
ENDIF(XMATH_NO_IOSTREAM)

IF(GENERATE_IND_SHAPE)
	ADD_DEFINITIONS(-D_GENERATE_IND_SHAPE_)
ENDIF(GENERATE_IND_SHAPE)
IF(NT)
	ADD_DEFINITIONS(-D_NT)
ENDIF(NT)
# tractortractor's added end



# globals
INCLUDE_DIRECTORIES(
	${SDL2_INCLUDE_DIR}
	${SDL2_NET_INCLUDE_DIR}
	${FFMPEG_INCLUDE_DIRS}
	${CLUNK_INCLUDE_DIR}
	${OGG_INCLUDE_DIR}
	${VORBIS_INCLUDE_DIR}
	${VORBISFILE_INCLUDE_DIR}
	${ZLIB_INCLUDE_DIR} # tractortractor's added
	/usr/local/include
)

# tractortractor's added begin
IF(ENTRIES_CONTROL OR VANGERS_DEBUG)
	INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
ENDIF(ENTRIES_CONTROL OR VANGERS_DEBUG)
# tractortractor's added end

IF (NOT MSVC) # tractortractor's added
	ADD_DEFINITIONS(-Wall -Wextra )
	#ADD_DEFINITIONS(-Weffc++) #Extra debug
#	ADD_DEFINITIONS(-g) # tractortractor's commented
	ADD_DEFINITIONS(-O2)
	IF (NOT MINGW)
		ADD_DEFINITIONS(-ftree-vectorize)
		ADD_DEFINITIONS(-ffast-math)
	ENDIF (NOT MINGW)
	ADD_DEFINITIONS(-msse2)
ELSE (NOT MSVC) # tractortractor's added
	#/w34716 since AVITimerCallback defined in lib/xsound/avi.cpp line 36 does not return. # tractortractor's added
	#/DSDL_MAIN_HANDLED to not define SDL's main function as main. # tractortractor's added
	ADD_DEFINITIONS(/w34716 /DSDL_MAIN_HANDLED) # tractortractor's added
ENDIF (NOT MSVC) # tractortractor's added



# subdirs
ADD_SUBDIRECTORY("src")
ADD_SUBDIRECTORY("lib/xgraph")
ADD_SUBDIRECTORY("lib/xsound")
ADD_SUBDIRECTORY("lib/xtool")
ADD_SUBDIRECTORY("lib/utils")
